tests/macros/expand/mask.stderr
error: option `mask` does not exist for kind `expand`
 --> $DIR/mask.rs:2:46
  |
2 |     let q = inquisition::questions![expand { mask: todo!() }];
  |                                              ^^^^
