tests/macros/expand/mask.rs
fn main() {
    let q = inquisition::questions![expand { mask: todo!() }];
}
